--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/3.0.1/jspdf.umd.min.js"></script>
+    <script>
+      window.jspdf= window.jspdf.jsPDF;
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume Builder Frontend</title>
   </head>
